Open Graph Protocol metadata.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
       gtag('config', 'UA-115283549-3');
     </script>
 
+		<meta property="og:title" content="Rulers" />
+		<meta property="og:description" content="Generate DXF files for laser cutting and engraving rulers." />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://umluizlima.github.io/rulers/" />
+		<meta property="og:image" content="https://umluizlima.github.io/rulers/images/bg01.jpg" />
+
 		<title>Rulers</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
